--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@
 /test/dummy/storage/
 /test/dummy/tmp/
 .byebug_history
+
+
+# Ignore local gems files.
+/.gems
+.rbenv-gemsets
+
+# Ignore files.
+tags
+*.swp
+.DS_Store
